--- a/runs/minimal/nextflow.config
+++ b/runs/minimal/nextflow.config
@@ -1,4 +1,4 @@
 params {
-    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "combat", "trvaep"]
+    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
     benchmark = true
 }
