Improve run configurations

--- a/runs/BrCa/nextflow.config
+++ b/runs/BrCa/nextflow.config
@@ -1,3 +1,1 @@
-params {
-    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
-}
+includeConfig "../atlas.config"
