--- a/nextflow.config
+++ b/nextflow.config
@@ -3,18 +3,17 @@ params {
     publish_dir_mode = "link"
     samplesheet = null
     samplesheet2 = null
-    mnn = false
     clustering_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
     celltypist_model = "Cells_Intestinal_Tract.pkl"
     celltypist_majority_voting = true
     organism = "human"
-    integration_methods = ["scvi", "scanvi", "harmony", "bbknn", "combat", "scanorama"]
+    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat"]
 
     benchmark = false
     benchmark_hvgs = 100
 
-    max_cpus = 60
-    max_memory = 512.GB
+    max_cpus = 24
+    max_memory = 1200.GB
     max_time = 48.h
 }
 
