--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ params {
     celltypist_model = "Cells_Intestinal_Tract.pkl"
     celltypist_majority_voting = true
     organism = "human"
-    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat"]
+    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
 
     benchmark = false
     benchmark_hvgs = 100
