--- a/runs/minimal/nextflow.config
+++ b/runs/minimal/nextflow.config
@@ -1,6 +1,8 @@
-tower.enabled = true
+includeConfig "../common.config"
 
 
 params {
     benchmark = true
+    benchmark_hvgs = 100
+    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
 }
