Smoothen channel structure

--- a/runs/minimal/nextflow.config
+++ b/runs/minimal/nextflow.config
@@ -4,5 +4,5 @@ includeConfig "../common.config"
 params {
     benchmark = true
     benchmark_hvgs = 100
-    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "desc", "combat"]
+    integration_methods = ["scvi", "scanvi", "harmony", "scanorama", "desc", "combat"]
 }
