--- a/runs/minimal/nextflow.config
+++ b/runs/minimal/nextflow.config
@@ -6,3 +6,7 @@ params {
     benchmark_hvgs = 100
     integration_methods = ["scvi", "scanvi", "harmony", "scanorama", "desc", "combat"]
 }
+
+process {
+    executor = "local"
+}
