--- a/docker/rpy/environment.yml
+++ b/docker/rpy/environment.yml
@@ -1,4 +1,4 @@
-name: single-cell
+name: base
 channels:
 - bioconda
 - conda-forge
@@ -7,13 +7,11 @@ dependencies:
 - _openmp_mutex=4.5=2_gnu
 - _r-mutex=1.0.1=anacondar_1
 - alsa-lib=1.2.10=hd590300_0
-- anndata=0.10.3=pyhd8ed1ab_0
+- anndata=0.10.4=pyhd8ed1ab_0
 - anndata2ri=1.3.1=pyhdfd78af_0
-- anyio=4.2.0=pyhd8ed1ab_0
 - argcomplete=3.2.1=pyhd8ed1ab_0
 - arpack=3.8.0=nompi_h0baa96a_101
 - array-api-compat=1.4=pyhd8ed1ab_0
-- asttokens=2.4.1=pyhd8ed1ab_0
 - attr=2.5.1=h166bdaf_1
 - binutils_impl_linux-64=2.40=hf600244_0
 - bioconductor-beachmat=2.18.0=r43hf17093f_0
@@ -54,17 +52,13 @@ dependencies:
 - bioconductor-summarizedexperiment=1.32.0=r43hdfd78af_0
 - bioconductor-xvector=0.42.0=r43ha9d7317_1
 - bioconductor-zlibbioc=1.48.0=r43ha9d7317_1
-- blosc=1.21.5=h0f2a231_0
 - brotli=1.1.0=hd590300_1
 - brotli-bin=1.1.0=hd590300_1
 - brotli-python=1.1.0=py311hb755f60_1
 - bwidget=1.9.14=ha770c72_1
 - bzip2=1.0.8=hd590300_5
 - c-ares=1.24.0=hd590300_0
-- c-blosc2=2.12.0=hb4ffafa_0
 - ca-certificates=2023.11.17=hbcca054_0
-- cachecontrol=0.13.1=pyhd8ed1ab_0
-- cachecontrol-with-filecache=0.13.1=pyhd8ed1ab_0
 - cached-property=1.5.2=hd8ed1ab_1
 - cached_property=1.5.2=pyha770c72_1
 - cairo=1.18.0=h3faef2a_0
@@ -72,26 +66,16 @@ dependencies:
 - certifi=2023.11.17=pyhd8ed1ab_0
 - cffi=1.16.0=py311hb3a22ac_0
 - charset-normalizer=3.3.2=pyhd8ed1ab_0
-- cleo=2.1.0=pyhd8ed1ab_0
 - click=8.1.7=unix_pyh707e725_0
 - colorama=0.4.6=pyhd8ed1ab_0
-- comm=0.2.1=pyhd8ed1ab_0
 - contourpy=1.2.0=py311h9547e67_0
-- crashtest=0.4.1=pyhd8ed1ab_0
-- cryptography=41.0.7=py311hcb13ee4_1
 - curl=8.5.0=hca28451_0
 - cycler=0.12.1=pyhd8ed1ab_0
 - dbus=1.13.6=h5008d03_3
-- decorator=5.1.1=pyhd8ed1ab_0
-- distlib=0.3.8=pyhd8ed1ab_0
-- dnspython=2.4.2=pyhd8ed1ab_1
-- dulwich=0.21.7=py311h459d7ec_0
 - dunamai=1.19.0=pyhd8ed1ab_0
 - et_xmlfile=1.1.0=pyhd8ed1ab_0
 - exceptiongroup=1.2.0=pyhd8ed1ab_0
-- executing=2.0.1=pyhd8ed1ab_0
 - expat=2.5.0=hcb278e6_1
-- filelock=3.13.1=pyhd8ed1ab_0
 - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
 - font-ttf-inconsolata=3.000=h77eed37_0
 - font-ttf-source-code-pro=2.038=h77eed37_0
@@ -102,9 +86,8 @@ dependencies:
 - fonttools=4.47.0=py311h459d7ec_0
 - freetype=2.12.1=h267a509_2
 - fribidi=1.0.10=h36c2ea0_0
-- fsspec=2023.12.2=pyhca7485f_0
-- future=0.18.3=pyhd8ed1ab_0
 - gcc_impl_linux-64=13.2.0=h338b0a0_3
+- get-annotations=0.1.2=pyhd8ed1ab_0
 - get_version=3.5.5=pyhd8ed1ab_0
 - gettext=0.21.1=h27087fc_0
 - gfortran_impl_linux-64=13.2.0=h76e1118_3
@@ -113,46 +96,29 @@ dependencies:
 - glib-tools=2.78.3=hfc55251_0
 - glpk=5.0=h445213a_0
 - gmp=6.3.0=h59595ed_0
-- gmpy2=2.1.2=py311h6a5fa03_1
 - graphite2=1.3.13=h58526e2_1001
 - gst-plugins-base=1.22.8=h8e1006c_0
 - gstreamer=1.22.8=h98fc4e7_0
 - gxx_impl_linux-64=13.2.0=h338b0a0_3
-- h11=0.14.0=pyhd8ed1ab_0
-- h2=4.1.0=pyhd8ed1ab_0
 - h5py=3.10.0=nompi_py311hebc2b07_101
 - harfbuzz=8.3.0=h3d44ed6_0
 - hdf5=1.14.3=nompi_h4f84152_100
-- hpack=4.0.0=pyh9f0ad1d_0
-- httpcore=1.0.2=pyhd8ed1ab_0
-- hyperframe=6.0.1=pyhd8ed1ab_0
-- hyperopt=0.1.2=py_0
 - icu=73.2=h59595ed_0
 - idna=3.6=pyhd8ed1ab_0
-- igraph=0.10.8=h52253d4_1
+- igraph=0.10.8=h66a01bf_0
 - importlib-metadata=7.0.1=pyha770c72_0
-- importlib_metadata=7.0.1=hd8ed1ab_0
-- ipython=8.19.0=pyh707e725_0
-- ipywidgets=8.1.1=pyhd8ed1ab_0
-- jaraco.classes=3.3.0=pyhd8ed1ab_0
-- jedi=0.19.1=pyhd8ed1ab_0
-- jeepney=0.8.0=pyhd8ed1ab_0
 - jinja2=3.1.2=pyhd8ed1ab_1
 - joblib=1.3.2=pyhd8ed1ab_0
 - jq=1.5=0
-- jupyterlab_widgets=3.0.9=pyhd8ed1ab_0
 - kernel-headers_linux-64=2.6.32=he073ed8_16
-- keyring=24.3.0=py311h38be061_0
 - keyutils=1.6.1=h166bdaf_0
 - kiwisolver=1.4.5=py311h9547e67_1
 - krb5=1.21.2=h659d440_0
 - lame=3.100=h166bdaf_1003
 - lcms2=2.16=hb7c19ff_0
 - ld_impl_linux-64=2.40=h41732ed_0
-- legacy-api-wrap=1.2=py_0
 - leidenalg=0.10.1=py311hb755f60_1
 - lerc=4.0.0=h27087fc_0
-- libabseil=20230802.1=cxx17_h59595ed_0
 - libaec=1.1.2=h59595ed_1
 - libblas=3.9.0=20_linux64_openblas
 - libbrotlicommon=1.1.0=hd590300_1
@@ -180,12 +146,13 @@ dependencies:
 - libglib=2.78.3=h783c2da_0
 - libgomp=13.2.0=h807b86a_3
 - libgpg-error=1.47=h71f35ed_0
+- libhwloc=2.9.3=default_h554bfaf_1009
 - libiconv=1.17=hd590300_2
 - libjpeg-turbo=3.0.0=hd590300_1
 - liblapack=3.9.0=20_linux64_openblas
 - libleidenalg=0.11.1=h00ab1b0_0
 - libllvm14=14.0.6=hcd5def8_4
-- libllvm15=15.0.7=hb3ce162_4
+- libllvm15=15.0.7=h5cf9203_3
 - libnghttp2=1.58.0=h47da74e_1
 - libnsl=2.0.1=hd590300_0
 - libogg=1.3.4=h7f98852_1
@@ -193,7 +160,6 @@ dependencies:
 - libopus=1.3.1=h7f98852_1
 - libpng=1.6.39=h753d276_0
 - libpq=16.1=h33b98f1_7
-- libprotobuf=4.24.4=hf27288f_0
 - libsanitizer=13.2.0=h7e041cc_3
 - libsndfile=1.2.2=hc60ed4a_1
 - libsqlite=3.44.2=h2797004_0
@@ -203,98 +169,61 @@ dependencies:
 - libsystemd0=255=h3516f8a_0
 - libtiff=4.6.0=ha9c0a0a_2
 - libuuid=2.38.1=h0b41bf4_0
-- libuv=1.46.0=hd590300_0
 - libvorbis=1.3.7=h9c3ff4c_0
 - libwebp-base=1.3.2=hd590300_0
 - libxcb=1.15=h0b41bf4_0
 - libxcrypt=4.4.36=hd590300_1
-- libxkbcommon=1.6.0=hd429924_1
-- libxml2=2.12.3=h232c23b_0
+- libxkbcommon=1.6.0=h5d7e998_0
+- libxml2=2.11.6=h232c23b_0
 - libzlib=1.2.13=hd590300_5
-- lightning-utilities=0.10.0=pyhd8ed1ab_0
 - llvmlite=0.41.1=py311ha6695c7_0
 - lz4-c=1.9.4=hcb278e6_0
-- lzo=2.10=h516909a_1000
 - make=4.3=hd18ef5c_1
-- markdown-it-py=3.0.0=pyhd8ed1ab_0
 - markupsafe=2.1.3=py311h459d7ec_1
-- matplotlib=3.6.3=py311h38be061_0
-- matplotlib-base=3.6.3=py311h8597a09_0
-- matplotlib-inline=0.1.6=pyhd8ed1ab_0
-- mdurl=0.1.0=pyhd8ed1ab_1
-- more-itertools=10.1.0=pyhd8ed1ab_0
-- mpc=1.3.1=hfe3b2da_0
-- mpfr=4.2.1=h9458935_0
+- matplotlib=3.8.2=py311h38be061_0
+- matplotlib-base=3.8.2=py311h54ef318_0
 - mpg123=1.32.3=h59595ed_0
-- mpmath=1.3.0=pyhd8ed1ab_0
-- msgpack-python=1.0.7=py311h9547e67_0
 - munkres=1.0.7=py_1
 - mysql-common=8.0.33=hf1915f5_6
 - mysql-libs=8.0.33=hca2cd23_6
 - natsort=8.4.0=pyhd8ed1ab_0
 - ncurses=6.4=h59595ed_2
 - networkx=3.2.1=pyhd8ed1ab_0
-- nomkl=1.0=h5ca1d4c_0
 - nspr=4.35=h27087fc_0
 - nss=3.96=h1d7d5a4_0
 - numba=0.58.1=py311h96b013e_0
-- numexpr=2.8.8=py311h039bad6_100
 - numpy=1.26.3=py311h64a7726_0
 - openjpeg=2.5.0=h488ebb8_3
 - openpyxl=3.1.2=py311h459d7ec_1
 - openssl=3.2.0=hd590300_1
-- opt_einsum=3.3.0=pyhc1e730c_2
 - packaging=23.2=pyhd8ed1ab_0
-- pandas=1.5.3=py311h2872171_1
+- pandas=2.1.4=py311h320fe9a_0
 - pandoc=3.1.3=h32600fe_0
 - pango=1.50.14=ha41ecd1_2
-- parso=0.8.3=pyhd8ed1ab_0
 - patsy=0.5.5=pyhd8ed1ab_0
 - pcre2=10.42=hcad00b1_0
 - perl=5.32.1=7_hd590300_perl5
-- pexpect=4.8.0=pyh1a96a4e_2
-- pickleshare=0.7.5=py_1003
 - pillow=10.2.0=py311ha6c5da5_0
 - pip=23.3.2=pyhd8ed1ab_0
 - pixman=0.42.2=h59595ed_0
-- pkginfo=1.9.6=pyhd8ed1ab_0
-- platformdirs=3.11.0=pyhd8ed1ab_0
 - ply=3.11=py_1
-- poetry=1.7.1=linux_pyha804496_0
-- poetry-core=1.8.1=pyhd8ed1ab_0
-- poetry-plugin-export=1.6.0=pyhd8ed1ab_0
-- prompt-toolkit=3.0.42=pyha770c72_0
 - pthread-stubs=0.4=h36c2ea0_1001
-- ptyprocess=0.7.0=pyhd3deb0d_0
 - pulseaudio-client=16.1=hb77b528_5
-- pure_eval=0.2.2=pyhd8ed1ab_0
-- py-cpuinfo=9.0.0=pyhd8ed1ab_0
 - pycparser=2.21=pyhd8ed1ab_0
-- pygments=2.17.2=pyhd8ed1ab_0
-- pymongo=4.6.1=py311hb755f60_0
 - pynndescent=0.5.11=pyhca7485f_0
 - pyparsing=3.1.1=pyhd8ed1ab_0
-- pyproject_hooks=1.0.0=pyhd8ed1ab_0
 - pyqt=5.15.9=py311hf0fb5b6_5
 - pyqt5-sip=12.12.2=py311hb755f60_5
-- pyro-api=0.1.2=pyhd8ed1ab_0
-- pyro-ppl=1.8.6=pyhd8ed1ab_0
 - pysocks=1.7.1=pyha2e5f31_6
-- pytables=3.9.2=py311h10c7f7f_1
 - python=3.11.7=hab00c5b_1_cpython
 - python-annoy=1.17.2=py311hb755f60_1
-- python-build=1.0.3=pyhd8ed1ab_0
 - python-dateutil=2.8.2=pyhd8ed1ab_0
-- python-fastjsonschema=2.19.1=pyhd8ed1ab_0
-- python-igraph=0.11.3=py311h8290d24_1
-- python-installer=0.7.0=pyhd8ed1ab_0
+- python-igraph=0.11.3=py311h535dc8a_0
 - python-tzdata=2023.4=pyhd8ed1ab_0
 - python_abi=3.11=4_cp311
-- pytorch=2.1.0=cpu_generic_py311h495eaba_0
-- pytorch-lightning=2.1.3=pyhd8ed1ab_0
 - pytz=2023.3.post1=pyhd8ed1ab_0
 - pyyaml=6.0.1=py311h459d7ec_1
-- qt-main=5.15.8=h450f30e_18
+- qt-main=5.15.8=h82b777d_17
 - r-abind=1.4_5=r43hc72bb7e_1005
 - r-anndata=0.7.5.4=r43hdfd78af_2
 - r-argparse=2.2.2=r43hc72bb7e_1
@@ -370,7 +299,7 @@ dependencies:
 - r-httpuv=1.6.13=r43ha503ecb_0
 - r-httr=1.4.7=r43hc72bb7e_0
 - r-ica=1.0_3=r43hc72bb7e_2
-- r-igraph=1.5.1=r43hb147323_1
+- r-igraph=1.5.1=r43hbd8eb98_0
 - r-irlba=2.3.5.1=r43h316c678_1
 - r-isoband=0.2.7=r43ha503ecb_2
 - r-iterators=1.0.14=r43hc72bb7e_2
@@ -481,37 +410,24 @@ dependencies:
 - r-xtable=1.8_4=r43hc72bb7e_5
 - r-yaml=2.3.8=r43h57805ef_0
 - r-zoo=1.8_12=r43h57805ef_1
-- rapidfuzz=3.6.1=py311hb755f60_0
 - readline=8.2=h8228510_1
 - requests=2.31.0=pyhd8ed1ab_0
-- requests-toolbelt=1.0.0=pyhd8ed1ab_0
-- rich=13.7.0=pyhd8ed1ab_0
 - rpy2=3.5.11=py311r43h1f0f07a_3
-- scanpy=1.7.2=pyhdfd78af_0
+- scanpy=1.9.6=pyhd8ed1ab_1
 - scikit-learn=1.3.2=py311hc009520_2
 - scipy=1.11.4=py311h64a7726_0
-- scvi-tools=0.11.0=pyhdfd78af_0
-- seaborn=0.13.0=hd8ed1ab_0
-- seaborn-base=0.13.0=pyhd8ed1ab_0
-- secretstorage=3.3.3=py311h38be061_2
+- seaborn=0.13.1=hd8ed1ab_0
+- seaborn-base=0.13.1=pyhd8ed1ab_0
 - sed=4.8=he412f7d_0
+- session-info=1.0.0=pyhd8ed1ab_0
 - setuptools=69.0.3=pyhd8ed1ab_0
-- setuptools-scm=8.0.4=pyhd8ed1ab_0
-- setuptools_scm=8.0.4=hd8ed1ab_0
-- shellingham=1.5.4=pyhd8ed1ab_0
 - simplegeneric=0.8.1=py_1
-- sinfo=0.3.1=py_0
 - sip=6.7.12=py311hb755f60_0
 - six=1.16.0=pyh6c4a22f_0
-- sleef=3.5.1=h9b69904_2
-- snappy=1.1.10=h9fff704_0
-- sniffio=1.3.0=pyhd8ed1ab_0
-- stack_data=0.6.2=pyhd8ed1ab_0
 - statsmodels=0.14.1=py311h1f0f07a_0
 - stdlib-list=0.8.0=pyhd8ed1ab_0
-- sympy=1.12=pypyh9d50eac_103
 - sysroot_linux-64=2.12=he073ed8_16
-- tbb=2021.7.0=h924138e_0
+- tbb=2021.11.0=h00ab1b0_0
 - texttable=1.7.0=pyhd8ed1ab_0
 - threadpoolctl=3.2.0=pyha21a80b_0
 - tk=8.6.13=noxft_h4845f30_101
@@ -519,21 +435,13 @@ dependencies:
 - toml=0.10.2=pyhd8ed1ab_0
 - tomli=2.0.1=pyhd8ed1ab_0
 - tomlkit=0.12.3=pyha770c72_0
-- torchmetrics=1.2.1=pyhd8ed1ab_0
 - tornado=6.3.3=py311h459d7ec_1
 - tqdm=4.66.1=pyhd8ed1ab_0
-- traitlets=5.14.1=pyhd8ed1ab_0
-- trove-classifiers=2023.11.29=pyhd8ed1ab_0
-- typing-extensions=4.9.0=hd8ed1ab_0
-- typing_extensions=4.9.0=pyha770c72_0
 - tzdata=2023d=h0c530f3_0
 - tzlocal=5.2=py311h38be061_0
 - umap-learn=0.5.5=py311h38be061_0
 - urllib3=2.1.0=pyhd8ed1ab_0
-- virtualenv=20.25.0=pyhd8ed1ab_0
-- wcwidth=0.2.12=pyhd8ed1ab_0
 - wheel=0.42.0=pyhd8ed1ab_0
-- widgetsnbextension=4.0.9=pyhd8ed1ab_0
 - xcb-util=0.4.0=hd590300_1
 - xcb-util-image=0.4.0=h8ee46fc_1
 - xcb-util-keysyms=0.4.0=h8ee46fc_1
@@ -559,6 +467,5 @@ dependencies:
 - yq=3.2.3=pyhd8ed1ab_0
 - zipp=3.17.0=pyhd8ed1ab_0
 - zlib=1.2.13=hd590300_5
-- zlib-ng=2.0.7=h0b41bf4_0
 - zstd=1.5.5=hfc55251_0
 
