Update parameter documentation

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,19 +1,21 @@
 // default parameters
 params {
-    publish_dir_mode = "link"
     samplesheet = null
-    samplesheet2 = null
-    clustering_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
-    celltypist_model = "Cells_Intestinal_Tract.pkl"
-    celltypist_majority_voting = true
+    outdir = "output"
+
+    celltypist_model = null
     organism = "human"
+
+    clustering_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
     integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
 
     benchmark = false
-    benchmark_hvgs = 100
+    benchmark_hvgs = 2000
 
-    max_cpus = 24
-    max_memory = 1200.GB
+    publish_dir_mode = "link"
+
+    max_cpus = 60
+    max_memory = 300.GB
     max_time = 48.h
 }
 
