Add example run configuration

--- a/example/nextflow.config
+++ b/example/nextflow.config
@@ -1,14 +1,13 @@
-includeConfig "../common.config"
-
-
 params {
+    samplesheet = "samplesheet.csv"
+
     benchmark = true
     benchmark_hvgs = 100
 
     celltypist_model = "Cells_Intestinal_Tract.pkl"
     integration_methods = ["scvi", "scanvi", "harmony", "scanorama", "desc", "combat"]
-}
 
-process {
-    executor = "local"
+    max_cpus = 20
+    max_memory = "100G"
+    max_time = "6.h"
 }
