--- a/example/nextflow.config
+++ b/example/nextflow.config
@@ -4,7 +4,7 @@ params {
     benchmark = true
     benchmark_hvgs = 100
 
-    celltypist_model = "Cells_Intestinal_Tract"
+    celltypist_model = "Cells_Intestinal_Tract.pkl"
     integration_methods = ["scvi", "scanvi", "harmony", "scanorama", "desc", "combat"]
 
     max_cpus = 20
