Change outdir definitions

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ params {
     benchmark = false
     benchmark_hvgs = 2000
 
-    publish_dir_mode = "link"
+    publish_mode = "symlink"
 
     max_cpus = 60
     max_memory = 300.GB
