--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,7 @@ params {
     benchmark = false
     benchmark_hvgs = 2000
     normalize = true // Should only be set to false for testing purposes
+    normalization_method = "scanpy"
 
     publish_mode = "symlink"
 
