Implement HVG filtering for integration

--- a/docker/rpy/environment.yml
+++ b/docker/rpy/environment.yml
@@ -57,7 +57,7 @@ dependencies:
 - brotli-python=1.1.0=py311hb755f60_1
 - bwidget=1.9.14=ha770c72_1
 - bzip2=1.0.8=hd590300_5
-- c-ares=1.24.0=hd590300_0
+- c-ares=1.25.0=hd590300_0
 - ca-certificates=2023.11.17=hbcca054_0
 - cached-property=1.5.2=hd8ed1ab_1
 - cached_property=1.5.2=pyha770c72_1
@@ -74,7 +74,7 @@ dependencies:
 - dbus=1.13.6=h5008d03_3
 - dunamai=1.19.0=pyhd8ed1ab_0
 - et_xmlfile=1.1.0=pyhd8ed1ab_0
-- exceptiongroup=1.2.0=pyhd8ed1ab_0
+- exceptiongroup=1.2.0=pyhd8ed1ab_2
 - expat=2.5.0=hcb278e6_1
 - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
 - font-ttf-inconsolata=3.000=h77eed37_0
@@ -83,7 +83,7 @@ dependencies:
 - fontconfig=2.14.2=h14ed4e7_0
 - fonts-conda-ecosystem=1=0
 - fonts-conda-forge=1=0
-- fonttools=4.47.0=py311h459d7ec_0
+- fonttools=4.47.2=py311h459d7ec_0
 - freetype=2.12.1=h267a509_2
 - fribidi=1.0.10=h36c2ea0_0
 - gcc_impl_linux-64=13.2.0=h338b0a0_3
@@ -97,8 +97,8 @@ dependencies:
 - glpk=5.0=h445213a_0
 - gmp=6.3.0=h59595ed_0
 - graphite2=1.3.13=h58526e2_1001
-- gst-plugins-base=1.22.8=h8e1006c_0
-- gstreamer=1.22.8=h98fc4e7_0
+- gst-plugins-base=1.22.8=h8e1006c_1
+- gstreamer=1.22.8=h98fc4e7_1
 - gxx_impl_linux-64=13.2.0=h338b0a0_3
 - h5py=3.10.0=nompi_py311hebc2b07_101
 - harfbuzz=8.3.0=h3d44ed6_0
@@ -107,7 +107,7 @@ dependencies:
 - idna=3.6=pyhd8ed1ab_0
 - igraph=0.10.8=h66a01bf_0
 - importlib-metadata=7.0.1=pyha770c72_0
-- jinja2=3.1.2=pyhd8ed1ab_1
+- jinja2=3.1.3=pyhd8ed1ab_0
 - joblib=1.3.2=pyhd8ed1ab_0
 - jq=1.5=0
 - kernel-headers_linux-64=2.6.32=he073ed8_16
@@ -182,7 +182,7 @@ dependencies:
 - markupsafe=2.1.3=py311h459d7ec_1
 - matplotlib=3.8.2=py311h38be061_0
 - matplotlib-base=3.8.2=py311h54ef318_0
-- mpg123=1.32.3=h59595ed_0
+- mpg123=1.32.4=h59595ed_0
 - munkres=1.0.7=py_1
 - mysql-common=8.0.33=hf1915f5_6
 - mysql-libs=8.0.33=hca2cd23_6
@@ -200,12 +200,12 @@ dependencies:
 - pandas=2.1.4=py311h320fe9a_0
 - pandoc=3.1.3=h32600fe_0
 - pango=1.50.14=ha41ecd1_2
-- patsy=0.5.5=pyhd8ed1ab_0
+- patsy=0.5.6=pyhd8ed1ab_0
 - pcre2=10.42=hcad00b1_0
 - perl=5.32.1=7_hd590300_perl5
 - pillow=10.2.0=py311ha6c5da5_0
 - pip=23.3.2=pyhd8ed1ab_0
-- pixman=0.42.2=h59595ed_0
+- pixman=0.43.0=h59595ed_0
 - ply=3.11=py_1
 - pthread-stubs=0.4=h36c2ea0_1001
 - pulseaudio-client=16.1=hb77b528_5
@@ -232,7 +232,7 @@ dependencies:
 - r-base=4.3.2=hb8ee39d_1
 - r-base64enc=0.1_3=r43h57805ef_1006
 - r-beeswarm=0.4.0=r43h57805ef_3
-- r-bh=1.81.0_1=r43hc72bb7e_1
+- r-bh=1.84.0_0=r43hc72bb7e_0
 - r-bitops=1.0_7=r43h57805ef_2
 - r-bslib=0.6.1=r43hc72bb7e_0
 - r-cachem=1.0.8=r43h57805ef_1
@@ -254,7 +254,7 @@ dependencies:
 - r-data.table=1.14.10=r43h029312a_0
 - r-dbscan=1.1_12=r43ha503ecb_0
 - r-deldir=2.0_2=r43h61816a4_0
-- r-digest=0.6.33=r43ha503ecb_0
+- r-digest=0.6.34=r43ha503ecb_0
 - r-doparallel=1.0.17=r43hc72bb7e_2
 - r-dotcall64=1.1_1=r43h61816a4_0
 - r-dplyr=1.1.4=r43ha503ecb_0
@@ -264,6 +264,7 @@ dependencies:
 - r-evaluate=0.23=r43hc72bb7e_0
 - r-fansi=1.0.6=r43h57805ef_0
 - r-farver=2.1.1=r43ha503ecb_2
+- r-fastdummies=1.7.3=r43hc72bb7e_0
 - r-fastmap=1.1.1=r43ha503ecb_1
 - r-findpython=1.0.8=r43hc72bb7e_1
 - r-fitdistrplus=1.1_11=r43hc72bb7e_1
@@ -281,11 +282,11 @@ dependencies:
 - r-ggbeeswarm=0.7.2=r43hc72bb7e_1
 - r-ggplot2=3.4.4=r43hc72bb7e_0
 - r-ggrastr=1.0.2=r43hc72bb7e_1
-- r-ggrepel=0.9.4=r43ha503ecb_0
+- r-ggrepel=0.9.5=r43ha503ecb_0
 - r-ggridges=0.5.5=r43hc72bb7e_0
 - r-globaloptions=0.1.2=r43ha770c72_2
 - r-globals=0.16.2=r43hc72bb7e_1
-- r-glue=1.6.2=r43h57805ef_2
+- r-glue=1.7.0=r43h57805ef_0
 - r-goftest=1.2_3=r43h57805ef_2
 - r-gplots=3.1.3=r43hc72bb7e_2
 - r-gridextra=2.3=r43hc72bb7e_1005
@@ -295,7 +296,7 @@ dependencies:
 - r-hexbin=1.28.3=r43h61816a4_1
 - r-highr=0.10=r43hc72bb7e_1
 - r-htmltools=0.5.7=r43ha503ecb_0
-- r-htmlwidgets=1.6.4=r43hc72bb7e_0
+- r-htmlwidgets=1.6.4=r43hc72bb7e_1
 - r-httpuv=1.6.13=r43ha503ecb_0
 - r-httr=1.4.7=r43hc72bb7e_0
 - r-ica=1.0_3=r43hc72bb7e_2
@@ -332,7 +333,7 @@ dependencies:
 - r-npsurv=0.5_0=r43hc72bb7e_2
 - r-openssl=2.1.1=r43hb353fa6_0
 - r-parallelly=1.36.0=r43hc72bb7e_1
-- r-patchwork=1.1.3=r43hc72bb7e_0
+- r-patchwork=1.2.0=r43hc72bb7e_0
 - r-pbapply=1.7_2=r43hc72bb7e_0
 - r-pheatmap=1.0.12=r43hc72bb7e_4
 - r-pillar=1.9.0=r43hc72bb7e_1
@@ -349,7 +350,7 @@ dependencies:
 - r-rann=2.6.1=r43ha503ecb_4
 - r-rappdirs=0.3.3=r43h57805ef_2
 - r-rcolorbrewer=1.1_3=r43h785f33e_2
-- r-rcpp=1.0.11=r43h7df8631_0
+- r-rcpp=1.0.12=r43h7df8631_0
 - r-rcppannoy=0.0.21=r43ha503ecb_0
 - r-rcpparmadillo=0.12.6.4.0=r43h08d816e_0
 - r-rcppeigen=0.3.3.9.4=r43h08d816e_0
@@ -357,21 +358,22 @@ dependencies:
 - r-rcppml=0.3.7=r43ha503ecb_1
 - r-rcppprogress=0.4.2=r43hc72bb7e_3
 - r-rcpptoml=0.2.2=r43ha503ecb_1
-- r-rcurl=1.98_1.13=r43hf9611b0_0
+- r-rcurl=1.98_1.14=r43hf9611b0_0
 - r-reshape2=1.4.4=r43ha503ecb_3
 - r-reticulate=1.34.0=r43ha503ecb_0
 - r-rjson=0.2.21=r43ha503ecb_3
-- r-rlang=1.1.2=r43ha503ecb_0
+- r-rlang=1.1.3=r43ha503ecb_0
 - r-rmarkdown=2.25=r43hc72bb7e_0
 - r-rocr=1.0_11=r43hc72bb7e_3
 - r-rprojroot=2.0.4=r43hc72bb7e_0
+- r-rspectra=0.16_1=r43h08d816e_2
 - r-rsvd=1.0.5=r43hc72bb7e_2
 - r-rtsne=0.17=r43h7ce84a7_0
 - r-sass=0.4.8=r43ha503ecb_0
 - r-scales=1.3.0=r43hc72bb7e_0
 - r-scattermore=1.2=r43ha503ecb_1
 - r-sctransform=0.4.1=r43h08d816e_0
-- r-seurat=4.4.0=r43ha503ecb_0
+- r-seurat=5.0.1=r43ha503ecb_0
 - r-seuratobject=5.0.0=r43ha503ecb_0
 - r-shape=1.4.6=r43ha770c72_2
 - r-shiny=1.8.0=r43h785f33e_0
@@ -397,7 +399,7 @@ dependencies:
 - r-tibble=3.2.1=r43h57805ef_2
 - r-tidyr=1.3.0=r43ha503ecb_1
 - r-tidyselect=1.2.0=r43hc72bb7e_1
-- r-tinytex=0.49=r43hc72bb7e_0
+- r-tinytex=0.49=r43hc72bb7e_1
 - r-utf8=1.2.4=r43h57805ef_0
 - r-uwot=0.1.16=r43ha503ecb_0
 - r-vctrs=0.6.5=r43ha503ecb_0
@@ -405,7 +407,7 @@ dependencies:
 - r-viridis=0.6.4=r43hc72bb7e_0
 - r-viridislite=0.4.2=r43hc72bb7e_1
 - r-withr=2.5.2=r43hc72bb7e_0
-- r-writexls=6.4.0=r43hc72bb7e_2
+- r-writexls=6.5.0=r43hc72bb7e_0
 - r-xfun=0.41=r43ha503ecb_0
 - r-xtable=1.8_4=r43hc72bb7e_5
 - r-yaml=2.3.8=r43h57805ef_0
@@ -415,6 +417,7 @@ dependencies:
 - rpy2=3.5.11=py311r43h1f0f07a_3
 - scanpy=1.9.6=pyhd8ed1ab_1
 - scikit-learn=1.3.2=py311hc009520_2
+- scikit-misc=0.1.4=py311ha9cf758_4
 - scipy=1.11.4=py311h64a7726_0
 - seaborn=0.13.1=hd8ed1ab_0
 - seaborn-base=0.13.1=pyhd8ed1ab_0
