--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@ params {
 
     benchmark = false
     benchmark_hvgs = 2000
+    integration_hvgs = 6000
     normalize = true // Should only be set to false for testing purposes
     normalization_method = "scanpy"
 
