Implement entropy calculation

--- a/docker/rpy/environment.yml
+++ b/docker/rpy/environment.yml
@@ -143,6 +143,7 @@ dependencies:
 - libgcrypt=1.10.3=hd590300_0
 - libgfortran-ng=13.2.0=h69a702a_3
 - libgfortran5=13.2.0=ha4646dd_3
+- libgit2=1.7.1=h76de150_1
 - libglib=2.78.3=h783c2da_0
 - libgomp=13.2.0=h807b86a_3
 - libgpg-error=1.47=h71f35ed_0
@@ -234,12 +235,16 @@ dependencies:
 - r-beeswarm=0.4.0=r43h57805ef_3
 - r-bh=1.84.0_0=r43hc72bb7e_0
 - r-bitops=1.0_7=r43h57805ef_2
+- r-brew=1.0_10=r43hc72bb7e_0
+- r-brio=1.1.4=r43h57805ef_0
 - r-bslib=0.6.1=r43hc72bb7e_0
 - r-cachem=1.0.8=r43h57805ef_1
 - r-cairo=1.6_2=r43h4dc26e9_0
+- r-callr=3.7.3=r43hc72bb7e_1
 - r-catools=1.18.2=r43ha503ecb_2
 - r-circlize=0.4.15=r43hc72bb7e_2
 - r-cli=3.6.2=r43ha503ecb_0
+- r-clipr=0.8.0=r43hc72bb7e_2
 - r-clue=0.3_65=r43h57805ef_0
 - r-cluster=2.1.6=r43h61816a4_0
 - r-codetools=0.2_19=r43hc72bb7e_1
@@ -249,14 +254,19 @@ dependencies:
 - r-cowplot=1.1.2=r43hc72bb7e_0
 - r-cpp11=0.4.7=r43hc72bb7e_0
 - r-crayon=1.5.2=r43hc72bb7e_2
+- r-credentials=2.0.1=r43hc72bb7e_0
 - r-crosstalk=1.2.1=r43hc72bb7e_0
 - r-curl=5.1.0=r43hf9611b0_0
 - r-data.table=1.14.10=r43h029312a_0
 - r-dbscan=1.1_12=r43ha503ecb_0
 - r-deldir=2.0_2=r43h61816a4_0
+- r-desc=1.4.3=r43hc72bb7e_0
+- r-devtools=2.4.5=r43hc72bb7e_2
+- r-diffobj=0.3.5=r43h57805ef_2
 - r-digest=0.6.34=r43ha503ecb_0
 - r-doparallel=1.0.17=r43hc72bb7e_2
 - r-dotcall64=1.1_1=r43h61816a4_0
+- r-downlit=0.4.3=r43hc72bb7e_0
 - r-dplyr=1.1.4=r43ha503ecb_0
 - r-dqrng=0.3.2=r43ha503ecb_0
 - r-ellipsis=0.3.2=r43h57805ef_2
@@ -278,12 +288,15 @@ dependencies:
 - r-future=1.33.1=r43hc72bb7e_0
 - r-future.apply=1.11.1=r43hc72bb7e_0
 - r-generics=0.1.3=r43hc72bb7e_2
+- r-gert=2.0.1=r43hc25a090_0
 - r-getoptlong=1.0.5=r43hc72bb7e_2
 - r-ggbeeswarm=0.7.2=r43hc72bb7e_1
 - r-ggplot2=3.4.4=r43hc72bb7e_0
 - r-ggrastr=1.0.2=r43hc72bb7e_1
 - r-ggrepel=0.9.5=r43ha503ecb_0
 - r-ggridges=0.5.5=r43hc72bb7e_0
+- r-gh=1.4.0=r43hc72bb7e_1
+- r-gitcreds=0.1.2=r43hc72bb7e_2
 - r-globaloptions=0.1.2=r43ha770c72_2
 - r-globals=0.16.2=r43hc72bb7e_1
 - r-glue=1.7.0=r43h57805ef_0
@@ -299,8 +312,10 @@ dependencies:
 - r-htmlwidgets=1.6.4=r43hc72bb7e_1
 - r-httpuv=1.6.13=r43ha503ecb_0
 - r-httr=1.4.7=r43hc72bb7e_0
+- r-httr2=1.0.0=r43hc72bb7e_0
 - r-ica=1.0_3=r43hc72bb7e_2
 - r-igraph=1.5.1=r43hbd8eb98_0
+- r-ini=0.3.1=r43hc72bb7e_1005
 - r-irlba=2.3.5.1=r43h316c678_1
 - r-isoband=0.2.7=r43ha503ecb_2
 - r-iterators=1.0.14=r43hc72bb7e_2
@@ -337,18 +352,27 @@ dependencies:
 - r-pbapply=1.7_2=r43hc72bb7e_0
 - r-pheatmap=1.0.12=r43hc72bb7e_4
 - r-pillar=1.9.0=r43hc72bb7e_1
+- r-pkgbuild=1.4.2=r43hc72bb7e_0
 - r-pkgconfig=2.0.3=r43hc72bb7e_3
+- r-pkgdown=2.0.7=r43hc72bb7e_1
+- r-pkgload=1.3.3=r43hc72bb7e_0
 - r-plotly=4.10.3=r43hc72bb7e_0
 - r-plyr=1.8.9=r43ha503ecb_0
 - r-png=0.1_8=r43h81d01c5_1
 - r-polyclip=1.10_6=r43ha503ecb_0
+- r-praise=1.0.0=r43hc72bb7e_1007
+- r-prettyunits=1.2.0=r43hc72bb7e_0
+- r-processx=3.8.3=r43h57805ef_0
+- r-profvis=0.3.8=r43h57805ef_3
 - r-progressr=0.14.0=r43hc72bb7e_0
 - r-promises=1.2.1=r43ha503ecb_0
+- r-ps=1.7.5=r43h57805ef_1
 - r-purrr=1.0.2=r43h57805ef_0
 - r-r6=2.5.1=r43hc72bb7e_2
 - r-ragg=1.2.7=r43h73ae6e3_0
 - r-rann=2.6.1=r43ha503ecb_4
 - r-rappdirs=0.3.3=r43h57805ef_2
+- r-rcmdcheck=1.4.0=r43h785f33e_2
 - r-rcolorbrewer=1.1_3=r43h785f33e_2
 - r-rcpp=1.0.12=r43h7df8631_0
 - r-rcppannoy=0.0.21=r43ha503ecb_0
@@ -359,20 +383,26 @@ dependencies:
 - r-rcppprogress=0.4.2=r43hc72bb7e_3
 - r-rcpptoml=0.2.2=r43ha503ecb_1
 - r-rcurl=1.98_1.14=r43hf9611b0_0
+- r-rematch2=2.1.2=r43hc72bb7e_3
+- r-remotes=2.4.2.1=r43hc72bb7e_0
 - r-reshape2=1.4.4=r43ha503ecb_3
 - r-reticulate=1.34.0=r43ha503ecb_0
 - r-rjson=0.2.21=r43ha503ecb_3
 - r-rlang=1.1.3=r43ha503ecb_0
 - r-rmarkdown=2.25=r43hc72bb7e_0
 - r-rocr=1.0_11=r43hc72bb7e_3
+- r-roxygen2=7.3.0=r43ha503ecb_0
 - r-rprojroot=2.0.4=r43hc72bb7e_0
 - r-rspectra=0.16_1=r43h08d816e_2
+- r-rstudioapi=0.15.0=r43hc72bb7e_0
 - r-rsvd=1.0.5=r43hc72bb7e_2
 - r-rtsne=0.17=r43h7ce84a7_0
+- r-rversions=2.1.2=r43hc72bb7e_2
 - r-sass=0.4.8=r43ha503ecb_0
 - r-scales=1.3.0=r43hc72bb7e_0
 - r-scattermore=1.2=r43ha503ecb_1
 - r-sctransform=0.4.1=r43h08d816e_0
+- r-sessioninfo=1.2.2=r43hc72bb7e_2
 - r-seurat=5.0.1=r43ha503ecb_0
 - r-seuratobject=5.0.0=r43ha503ecb_0
 - r-shape=1.4.6=r43ha770c72_2
@@ -395,22 +425,30 @@ dependencies:
 - r-sys=3.4.2=r43h57805ef_1
 - r-systemfonts=1.0.5=r43haf97adc_0
 - r-tensor=1.5=r43hc72bb7e_1005
+- r-testthat=3.2.1=r43ha503ecb_0
 - r-textshaping=0.3.7=r43hd87b9d6_0
 - r-tibble=3.2.1=r43h57805ef_2
 - r-tidyr=1.3.0=r43ha503ecb_1
 - r-tidyselect=1.2.0=r43hc72bb7e_1
 - r-tinytex=0.49=r43hc72bb7e_1
+- r-urlchecker=1.0.1=r43hc72bb7e_2
+- r-usethis=2.2.2=r43hc72bb7e_0
 - r-utf8=1.2.4=r43h57805ef_0
 - r-uwot=0.1.16=r43ha503ecb_0
 - r-vctrs=0.6.5=r43ha503ecb_0
 - r-vipor=0.4.7=r43hc72bb7e_0
 - r-viridis=0.6.4=r43hc72bb7e_0
 - r-viridislite=0.4.2=r43hc72bb7e_1
+- r-waldo=0.5.2=r43hc72bb7e_0
+- r-whisker=0.4.1=r43hc72bb7e_1
 - r-withr=2.5.2=r43hc72bb7e_0
 - r-writexls=6.5.0=r43hc72bb7e_0
 - r-xfun=0.41=r43ha503ecb_0
+- r-xml2=1.3.6=r43h1ad5fc0_0
+- r-xopen=1.0.0=r43hc72bb7e_1005
 - r-xtable=1.8_4=r43hc72bb7e_5
 - r-yaml=2.3.8=r43h57805ef_0
+- r-zip=2.3.0=r43h57805ef_1
 - r-zoo=1.8_12=r43h57805ef_1
 - readline=8.2=h8228510_1
 - requests=2.31.0=pyhd8ed1ab_0
