--- a/nextflow.config
+++ b/nextflow.config
@@ -11,8 +11,7 @@ params {
     benchmark = false
     benchmark_hvgs = 2000
     integration_hvgs = 6000
-    normalize = true // Should only be set to false for testing purposes
-    normalization_method = "scanpy"
+    normalization_method = "log_total"
 
     publish_mode = "symlink"
 
