--- a/nextflow.config
+++ b/nextflow.config
@@ -5,7 +5,7 @@ params {
 
     celltypist_model = null
 
-    clustering_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
+    leiden_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
     integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
 
     benchmark = false
