--- a/docker/rpy/environment.yml
+++ b/docker/rpy/environment.yml
@@ -44,6 +44,7 @@ dependencies:
 - bioconductor-scaledmatrix=1.10.0=r43hdfd78af_0
 - bioconductor-scater=1.30.1=r43hdfd78af_0
 - bioconductor-scran=1.30.0=r43hf17093f_0
+- bioconductor-scry=1.14.0=r43hdfd78af_0
 - bioconductor-scuttle=1.12.0=r43hf17093f_0
 - bioconductor-singlecellexperiment=1.24.0=r43hdfd78af_0
 - bioconductor-singler=2.4.0=r43hf17093f_0
@@ -297,6 +298,7 @@ dependencies:
 - r-ggridges=0.5.5=r43hc72bb7e_0
 - r-gh=1.4.0=r43hc72bb7e_1
 - r-gitcreds=0.1.2=r43hc72bb7e_2
+- r-glmpca=0.2.0=r43hc72bb7e_2
 - r-globaloptions=0.1.2=r43ha770c72_2
 - r-globals=0.16.2=r43hc72bb7e_1
 - r-glue=1.7.0=r43h57805ef_0
