--- a/docker/rapids/environment.yml
+++ b/docker/rapids/environment.yml
@@ -1,26 +1,470 @@
-name: rapids_singlecell
+name: base
 channels:
- - rapidsai
- - nvidia
- - conda-forge
- - bioconda
+- anaconda
+- bioconda
+- conda-forge
+- nvidia
+- rapidsai
 dependencies:
- - rapids=23.12
- - python=3.10
- - cuda-version=11.8
- - cudnn
- - cutensor
- - cusparselt
- - leidenalg
- - louvain
- - fa2
- - jupyterlab
- - pip
- - pip:
-    - decoupler
-    - omnipath
-    - gdown
-    - wget
-    - scikit-misc
-    - harmonypy
-    - rapids-singlecell
+- _libgcc_mutex=0.1=conda_forge
+- _openmp_mutex=4.5=2_gnu
+- aiohttp=3.9.1=py310h2372a71_0
+- aiosignal=1.3.1=pyhd8ed1ab_0
+- anyio=4.2.0=pyhd8ed1ab_0
+- aom=3.7.1=h59595ed_0
+- appdirs=1.4.4=pyh9f0ad1d_0
+- argon2-cffi=23.1.0=pyhd8ed1ab_0
+- argon2-cffi-bindings=21.2.0=py310h2372a71_4
+- arpack=3.8.0=nompi_h0baa96a_101
+- arrow=1.3.0=pyhd8ed1ab_0
+- async-timeout=4.0.3=pyhd8ed1ab_0
+- attrs=23.2.0=pyh71513ae_0
+- aws-c-auth=0.7.11=h0100c56_0
+- aws-c-cal=0.6.9=h5d48c4d_2
+- aws-c-common=0.9.10=hd590300_0
+- aws-c-compression=0.2.17=h7f92143_7
+- aws-c-event-stream=0.4.1=h0bcb0bb_1
+- aws-c-http=0.8.0=hd268abd_1
+- aws-c-io=0.13.36=hb3b01f7_3
+- aws-c-mqtt=0.10.0=hf5d392a_2
+- aws-c-s3=0.4.7=hf8c57b3_3
+- aws-c-sdkutils=0.1.13=h7f92143_0
+- aws-checksums=0.1.17=h7f92143_6
+- aws-crt-cpp=0.26.0=h600aa22_5
+- aws-sdk-cpp=1.11.210=h405b101_9
+- azure-core-cpp=1.10.3=h91d86a7_0
+- azure-storage-blobs-cpp=12.10.0=h00ab1b0_0
+- azure-storage-common-cpp=12.5.0=hb858b4b_2
+- beautifulsoup4=4.12.3=pyha770c72_0
+- bleach=6.1.0=pyhd8ed1ab_0
+- blosc=1.21.5=h0f2a231_0
+- bokeh=3.3.3=pyhd8ed1ab_0
+- branca=0.7.0=pyhd8ed1ab_1
+- brotli=1.1.0=hd590300_1
+- brotli-bin=1.1.0=hd590300_1
+- brotli-python=1.1.0=py310hc6cd4ac_1
+- brunsli=0.1=h9c3ff4c_0
+- bzip2=1.0.8=hd590300_5
+- c-ares=1.25.0=hd590300_0
+- c-blosc2=2.12.0=hb4ffafa_0
+- ca-certificates=2023.11.17=hbcca054_0
+- cached-property=1.5.2=hd8ed1ab_1
+- cached_property=1.5.2=pyha770c72_1
+- cachetools=5.3.2=pyhd8ed1ab_0
+- cairo=1.18.0=h3faef2a_0
+- certifi=2023.11.17=pyhd8ed1ab_0
+- cffi=1.16.0=py310h2fee648_0
+- cfitsio=4.3.1=hbdc6101_0
+- charls=2.4.2=h59595ed_0
+- charset-normalizer=3.3.2=pyhd8ed1ab_0
+- click=8.1.7=unix_pyh707e725_0
+- click-plugins=1.1.1=py_0
+- cligj=0.7.2=pyhd8ed1ab_1
+- cloudpickle=3.0.0=pyhd8ed1ab_0
+- colorama=0.4.6=pyhd8ed1ab_0
+- colorcet=3.0.1=pyhd8ed1ab_0
+- contourpy=1.2.0=py310hd41b1e2_0
+- cucim=23.12.01=cuda12_py310_231211_ga3445df_0
+- cuda-cccl=12.0.90=ha770c72_1
+- cuda-cccl-impl=2.0.1=ha770c72_1
+- cuda-cccl_linux-64=12.0.90=ha770c72_1
+- cuda-cudart=12.3.101=0
+- cuda-cudart-dev=12.3.101=0
+- cuda-cudart-dev_linux-64=12.0.107=h59595ed_8
+- cuda-cudart-static=12.3.101=0
+- cuda-cudart-static_linux-64=12.0.107=h59595ed_8
+- cuda-cudart_linux-64=12.0.107=h59595ed_8
+- cuda-nvcc-dev_linux-64=12.0.76=ha770c72_1
+- cuda-nvcc-impl=12.0.76=h59595ed_1
+- cuda-nvcc-tools=12.0.76=h59595ed_1
+- cuda-nvrtc=12.3.107=0
+- cuda-nvtx=12.3.101=0
+- cuda-profiler-api=12.3.101=0
+- cuda-python=12.2.1=py310h9f9f131_0
+- cuda-version=12.0=hffde075_2
+- cudf=23.12.01=cuda12_py310_231208_g2ce46216b5_0
+- cudf_kafka=23.12.01=cuda12_py310_231208_g2ce46216b5_0
+- cudnn=8.8.0.121=h264754d_4
+- cugraph=23.12.00=cuda12_py310_231206_g1309813f_0
+- cuml=23.12.00=cuda12_py310_231206_gad2bd2b65_0
+- cuproj=23.12.01=cuda12_py310_231207_g16727064_0
+- cupy=12.3.0=py310hfc31588_2
+- cusparselt=0.5.2.1=h10b603f_0
+- cuspatial=23.12.01=cuda12_py310_231207_g16727064_0
+- custreamz=23.12.01=cuda12_py310_231208_g2ce46216b5_0
+- cutensor=1.7.0.1=h10b603f_3
+- cuxfilter=23.12.00=cuda12_py310_231206_g63dabeb_0
+- cycler=0.12.1=pyhd8ed1ab_0
+- cyrus-sasl=2.1.27=h54b06d7_7
+- cytoolz=0.12.2=py310h2372a71_1
+- dask=2023.11.0=pyhd8ed1ab_0
+- dask-core=2023.11.0=pyhd8ed1ab_0
+- dask-cuda=23.12.00=py310_231206_ge1638ae_0
+- dask-cudf=23.12.01=cuda12_py310_231208_g2ce46216b5_0
+- datashader=0.16.0=pyhd8ed1ab_0
+- dav1d=1.2.1=hd590300_0
+- defusedxml=0.7.1=pyhd8ed1ab_0
+- distributed=2023.11.0=pyhd8ed1ab_0
+- dlpack=0.5=h9c3ff4c_0
+- docrep=0.3.2=pyh44b312d_0
+- entrypoints=0.4=pyhd8ed1ab_0
+- exceptiongroup=1.2.0=pyhd8ed1ab_2
+- expat=2.5.0=hcb278e6_1
+- fa2=0.3.5=py310h5764c6d_2
+- fastrlock=0.8.2=py310hc6cd4ac_2
+- filelock=3.9.0=py310h06a4308_0
+- fiona=1.9.5=py310h7631d76_0
+- fmt=9.1.0=h924138e_0
+- folium=0.15.1=pyhd8ed1ab_0
+- font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+- font-ttf-inconsolata=3.000=h77eed37_0
+- font-ttf-source-code-pro=2.038=h77eed37_0
+- font-ttf-ubuntu=0.83=h77eed37_1
+- fontconfig=2.14.2=h14ed4e7_0
+- fonts-conda-ecosystem=1=0
+- fonts-conda-forge=1=0
+- fonttools=4.47.2=py310h2372a71_0
+- fqdn=1.5.1=pyhd8ed1ab_0
+- freetype=2.12.1=h267a509_2
+- freexl=2.0.0=h743c826_0
+- frozenlist=1.4.1=py310h2372a71_0
+- fsspec=2023.12.2=pyhca7485f_0
+- gdal=1.9.2=0
+- gdk-pixbuf=2.42.10=h829c605_4
+- gdown=4.7.3=pyhd8ed1ab_0
+- geopandas=0.14.2=pyhd8ed1ab_0
+- geopandas-base=0.14.2=pyha770c72_0
+- geos=3.12.1=h59595ed_0
+- geotiff=1.7.1=hf074850_14
+- gettext=0.21.1=h27087fc_0
+- gflags=2.2.2=he1b5a44_1004
+- giflib=5.2.1=h0b41bf4_3
+- glog=0.6.0=h6f12383_0
+- glpk=5.0=h445213a_0
+- gmock=1.14.0=ha770c72_1
+- gmp=6.3.0=h59595ed_0
+- gtest=1.14.0=h00ab1b0_1
+- harmonypy=0.0.9=pyhdfd78af_0
+- hdf4=4.2.15=h2a13503_7
+- hdf5=1.14.3=nompi_h4f84152_100
+- holoviews=1.18.1=pyhd8ed1ab_0
+- icu=73.2=h59595ed_0
+- idna=3.6=pyhd8ed1ab_0
+- igraph=0.10.8=h52253d4_1
+- imagecodecs=2024.1.1=py310h496a806_0
+- imageio=2.33.1=pyh8c1a49c_0
+- importlib-metadata=7.0.1=pyha770c72_0
+- importlib_metadata=7.0.1=hd8ed1ab_0
+- importlib_resources=6.1.1=pyhd8ed1ab_0
+- inflect=5.3.0=py310h06a4308_1
+- isoduration=20.11.0=pyhd8ed1ab_0
+- jbig=2.1=h7f98852_2003
+- jinja2=3.1.3=pyhd8ed1ab_0
+- joblib=1.3.2=pyhd8ed1ab_0
+- json-c=0.17=h7ab15ed_0
+- jsonpointer=2.4=py310hff52083_3
+- jsonschema=4.21.0=pyhd8ed1ab_0
+- jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+- jsonschema-with-format-nongpl=4.21.0=pyhd8ed1ab_0
+- jupyter-server-proxy=4.1.0=pyhd8ed1ab_0
+- jupyter_client=8.6.0=pyhd8ed1ab_0
+- jupyter_core=5.7.1=py310hff52083_0
+- jupyter_events=0.9.0=pyhd8ed1ab_0
+- jupyter_server=2.12.5=pyhd8ed1ab_0
+- jupyter_server_terminals=0.5.1=pyhd8ed1ab_0
+- jupyterlab_pygments=0.3.0=pyhd8ed1ab_0
+- jxrlib=1.1=hd590300_3
+- kealib=1.5.3=h2f55d51_0
+- keyutils=1.6.1=h166bdaf_0
+- kiwisolver=1.4.5=py310hd41b1e2_1
+- krb5=1.21.2=h659d440_0
+- lazy_loader=0.3=pyhd8ed1ab_0
+- lcms2=2.16=hb7c19ff_0
+- ld_impl_linux-64=2.40=h41732ed_0
+- leidenalg=0.10.1=py310hc6cd4ac_1
+- lerc=4.0.0=h27087fc_0
+- libabseil=20230802.1=cxx17_h59595ed_0
+- libaec=1.1.2=h59595ed_1
+- libarchive=3.7.2=h2aa1ff5_1
+- libarrow=14.0.2=h84dd17c_2_cpu
+- libarrow-acero=14.0.2=h59595ed_2_cpu
+- libarrow-dataset=14.0.2=h59595ed_2_cpu
+- libarrow-flight=14.0.2=h120cb0d_2_cpu
+- libarrow-flight-sql=14.0.2=h61ff412_2_cpu
+- libarrow-gandiva=14.0.2=hacb8726_2_cpu
+- libarrow-substrait=14.0.2=h61ff412_2_cpu
+- libavif16=1.0.3=hef5bec9_1
+- libblas=3.9.0=20_linux64_openblas
+- libboost-headers=1.84.0=ha770c72_0
+- libbrotlicommon=1.1.0=hd590300_1
+- libbrotlidec=1.1.0=hd590300_1
+- libbrotlienc=1.1.0=hd590300_1
+- libcblas=3.9.0=20_linux64_openblas
+- libcrc32c=1.1.2=h9c3ff4c_0
+- libcublas=12.3.4.1=0
+- libcublas-dev=12.3.4.1=0
+- libcucim=23.12.01=cuda12_231211_ga3445df_0
+- libcudf=23.12.01=cuda12_231208_g2ce46216b5_0
+- libcudf_kafka=23.12.01=cuda12_231208_g2ce46216b5_0
+- libcufft=11.0.12.1=0
+- libcufile=1.8.1.2=0
+- libcufile-dev=1.8.1.2=0
+- libcugraph=23.12.00=cuda12_231206_g1309813f_0
+- libcugraph_etl=23.12.00=cuda12_231206_g1309813f_0
+- libcugraphops=23.12.00=cuda12_231206_g42d08202_0
+- libcuml=23.12.00=cuda12_231206_gad2bd2b65_0
+- libcumlprims=23.12.00=cuda12_231206_gc120fe0_0
+- libcurand=10.3.4.107=0
+- libcurand-dev=10.3.4.107=0
+- libcurl=8.5.0=hca28451_0
+- libcusolver=11.5.4.101=0
+- libcusolver-dev=11.5.4.101=0
+- libcusparse=12.2.0.103=0
+- libcusparse-dev=12.2.0.103=0
+- libcuspatial=23.12.01=cuda12_231207_g16727064_0
+- libdeflate=1.19=hd590300_0
+- libedit=3.1.20191231=he28a2e2_2
+- libev=4.33=hd590300_2
+- libevent=2.1.12=hf998b51_1
+- libexpat=2.5.0=hcb278e6_1
+- libffi=3.4.2=h7f98852_5
+- libgcc=7.2.0=h69d50b8_2
+- libgcc-ng=13.2.0=h807b86a_3
+- libgdal=3.7.3=h184a269_11
+- libgfortran-ng=13.2.0=h69a702a_3
+- libgfortran5=13.2.0=ha4646dd_3
+- libglib=2.78.3=h783c2da_0
+- libgomp=13.2.0=h807b86a_3
+- libgoogle-cloud=2.12.0=h5206363_4
+- libgrpc=1.59.3=hd6c4280_0
+- libiconv=1.17=hd590300_2
+- libidn2=2.3.4=h5eee18b_0
+- libjpeg-turbo=3.0.0=hd590300_1
+- libkml=1.3.0=h01aab08_1018
+- libkvikio=23.12.00=cuda12_231206_gf90bfbe_0
+- liblapack=3.9.0=20_linux64_openblas
+- libleidenalg=0.11.1=h00ab1b0_0
+- libllvm14=14.0.6=hcd5def8_4
+- libllvm15=15.0.7=hb3ce162_4
+- libnetcdf=4.9.2=nompi_h9612171_113
+- libnghttp2=1.58.0=h47da74e_1
+- libnl=3.9.0=hd590300_0
+- libnsl=2.0.1=hd590300_0
+- libntlm=1.4=h7f98852_1002
+- libnuma=2.0.16=h0b41bf4_1
+- libnvjitlink=12.3.101=0
+- libnvjpeg=12.3.0.81=0
+- libopenblas=0.3.25=pthreads_h413a1c8_0
+- libparquet=14.0.2=h352af49_2_cpu
+- libpng=1.6.39=h753d276_0
+- libpq=16.1=h33b98f1_7
+- libprotobuf=4.24.4=hf27288f_0
+- libraft=23.12.00=cuda12_231206_g9e2d6277_0
+- libraft-headers=23.12.00=cuda12_231206_g9e2d6277_0
+- libraft-headers-only=23.12.00=cuda12_231206_g9e2d6277_0
+- librdkafka=1.9.2=ha5a0de0_2
+- libre2-11=2023.06.02=h7a70373_0
+- librmm=23.12.00=cuda12_231206_g2db5cbb3_0
+- librttopo=1.1.0=h8917695_15
+- libsodium=1.0.18=h36c2ea0_1
+- libspatialindex=1.9.3=h9c3ff4c_4
+- libspatialite=5.1.0=h72606ae_3
+- libsqlite=3.44.2=h2797004_0
+- libssh2=1.11.0=h0841786_0
+- libstdcxx-ng=13.2.0=h7e041cc_3
+- libthrift=0.19.0=hb90f79a_1
+- libtiff=4.6.0=ha9c0a0a_2
+- libunistring=0.9.10=h27cfd23_0
+- libutf8proc=2.8.0=h166bdaf_0
+- libuuid=2.38.1=h0b41bf4_0
+- libuv=1.46.0=hd590300_0
+- libwebp=1.3.2=h658648e_1
+- libwebp-base=1.3.2=hd590300_0
+- libxcb=1.15=h0b41bf4_0
+- libxcrypt=4.4.36=hd590300_1
+- libxgboost=1.7.6=rapidsai_h52ede06_7
+- libxml2=2.12.4=h232c23b_1
+- libzip=1.10.1=h2629f0a_3
+- libzlib=1.2.13=hd590300_5
+- libzopfli=1.0.3=h9c3ff4c_0
+- linkify-it-py=2.0.2=pyhd8ed1ab_0
+- llvmlite=0.40.1=py310h1b8f574_0
+- locket=1.0.0=pyhd8ed1ab_0
+- louvain=0.8.1=py310hc6cd4ac_1
+- lz4=4.3.3=py310h350c4a5_0
+- lz4-c=1.9.4=hcb278e6_0
+- lzo=2.10=h516909a_1000
+- mapclassify=2.6.1=pyhd8ed1ab_0
+- markdown=3.5.2=pyhd8ed1ab_0
+- markdown-it-py=3.0.0=pyhd8ed1ab_0
+- markupsafe=2.1.3=py310h2372a71_1
+- matplotlib-base=3.8.2=py310h62c0568_0
+- mdit-py-plugins=0.4.0=pyhd8ed1ab_0
+- mdurl=0.1.2=pyhd8ed1ab_0
+- minizip=4.0.4=h0ab5242_0
+- mistune=3.0.2=pyhd8ed1ab_0
+- msgpack-python=1.0.7=py310hd41b1e2_0
+- multidict=6.0.4=py310h2372a71_1
+- multipledispatch=0.6.0=py_0
+- munch=4.0.0=pyhd8ed1ab_0
+- munkres=1.0.7=py_1
+- nbclient=0.8.0=pyhd8ed1ab_0
+- nbconvert-core=7.14.2=pyhd8ed1ab_0
+- nbformat=5.9.2=pyhd8ed1ab_0
+- nccl=2.19.4.1=h3a97aeb_0
+- ncurses=6.4=h59595ed_2
+- networkx=3.2.1=pyhd8ed1ab_0
+- nodejs=20.9.0=hb753e55_0
+- nspr=4.35=h27087fc_0
+- nss=3.96=h1d7d5a4_0
+- numba=0.57.1=py310h0f6aa51_0
+- numpy=1.24.4=py310ha4c1d20_0
+- nvcomp=3.0.4=h10b603f_1
+- nvtx=0.2.8=py310h2372a71_1
+- omnipath=1.0.8=pyhd8ed1ab_0
+- openjpeg=2.5.0=h488ebb8_3
+- openslide=3.4.1=h58ba908_12
+- openssl=3.2.0=hd590300_1
+- orc=1.9.2=h4b38347_0
+- overrides=7.4.0=pyhd8ed1ab_0
+- packaging=23.2=pyhd8ed1ab_0
+- pandas=1.5.3=py310h9b08913_1
+- pandocfilters=1.5.0=pyhd8ed1ab_0
+- panel=1.3.6=pyhd8ed1ab_0
+- param=2.0.2=pyhca7485f_0
+- partd=1.4.1=pyhd8ed1ab_0
+- pcre2=10.42=hcad00b1_0
+- pillow=10.2.0=py310h01dd4db_0
+- pip=23.3.2=pyhd8ed1ab_0
+- pixman=0.43.0=h59595ed_0
+- pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+- platformdirs=4.1.0=pyhd8ed1ab_0
+- poppler=23.12.0=h590f24d_0
+- poppler-data=0.4.12=hd8ed1ab_0
+- postgresql=16.1=h7387d8b_7
+- proj=9.3.0=h1d62c97_2
+- prometheus_client=0.19.0=pyhd8ed1ab_0
+- protobuf=4.24.4=py310h620c231_0
+- psutil=5.9.7=py310h2372a71_0
+- pthread-stubs=0.4=h36c2ea0_1001
+- ptyprocess=0.7.0=pyhd3deb0d_0
+- py-xgboost=1.7.6=rapidsai_py310h4c2db5f_7
+- pyarrow=14.0.2=py310hf9e7431_2_cpu
+- pyarrow-hotfix=0.6=pyhd8ed1ab_0
+- pycparser=2.21=pyhd8ed1ab_0
+- pyct=0.5.0=pyhd8ed1ab_0
+- pyee=8.1.0=pyhd8ed1ab_0
+- pygments=2.17.2=pyhd8ed1ab_0
+- pylibcugraph=23.12.00=cuda12_py310_231206_g1309813f_0
+- pylibraft=23.12.00=cuda12_py310_231206_g9e2d6277_0
+- pynvml=11.4.1=pyhd8ed1ab_0
+- pyparsing=3.1.1=pyhd8ed1ab_0
+- pyppeteer=1.0.2=pyhd8ed1ab_0
+- pyproj=3.6.1=py310h32c33b7_4
+- pysocks=1.7.1=pyha2e5f31_6
+- python=3.10.13=hd12c33a_1_cpython
+- python-confluent-kafka=1.9.2=py310h5764c6d_2
+- python-dateutil=2.8.2=pyhd8ed1ab_0
+- python-fastjsonschema=2.19.1=pyhd8ed1ab_0
+- python-igraph=0.11.3=py310hd766dba_1
+- python-json-logger=2.0.7=pyhd8ed1ab_0
+- python_abi=3.10=4_cp310
+- pytz=2023.3.post1=pyhd8ed1ab_0
+- pyviz_comms=3.0.0=pyhd8ed1ab_0
+- pywavelets=1.4.1=py310h1f7b6fc_1
+- pyyaml=6.0.1=py310h2372a71_1
+- pyzmq=25.1.2=py310h795f18f_0
+- raft-dask=23.12.00=cuda12_py310_231206_g9e2d6277_0
+- rapids=23.12.00=cuda12_py310_231206_g1d8bed4_0
+- rapids-dask-dependency=23.12.01=0
+- rapids-xgboost=23.12.00=cuda12_py310_231206_g1d8bed4_0
+- rav1e=0.6.6=he8a937b_2
+- rdma-core=49.0=hd3aeb46_2
+- re2=2023.06.02=h2873b5e_0
+- readline=8.2=h8228510_1
+- referencing=0.32.1=pyhd8ed1ab_0
+- requests=2.31.0=pyhd8ed1ab_0
+- rfc3339-validator=0.1.4=pyhd8ed1ab_0
+- rfc3986-validator=0.1.1=pyh9f0ad1d_0
+- rich=13.7.0=pyhd8ed1ab_0
+- rmm=23.12.00=cuda12_py310_231206_g2db5cbb3_0
+- rpds-py=0.17.1=py310hcb5633a_0
+- rtree=1.1.0=py310hbdcdc62_0
+- s2n=1.4.1=h06160fa_0
+- scikit-image=0.21.0=py310hc6cd4ac_0
+- scikit-learn=1.3.2=py310h1fdf081_2
+- scikit-misc=0.1.4=py310h3254323_4
+- scipy=1.11.4=py310hb13e2d6_0
+- send2trash=1.8.2=pyh41d4057_0
+- setuptools=69.0.3=pyhd8ed1ab_0
+- shapely=2.0.2=py310hc3e127f_1
+- simpervisor=1.0.0=pyhd8ed1ab_0
+- six=1.16.0=pyh6c4a22f_0
+- snappy=1.1.10=h9fff704_0
+- sniffio=1.3.0=pyhd8ed1ab_0
+- sortedcontainers=2.4.0=pyhd8ed1ab_0
+- soupsieve=2.5=pyhd8ed1ab_1
+- spdlog=1.11.0=h9b3ece8_1
+- sqlite=3.44.2=h2c6b66d_0
+- streamz=0.6.4=pyh6c4a22f_0
+- svt-av1=1.8.0=h59595ed_0
+- tblib=3.0.0=pyhd8ed1ab_0
+- terminado=0.18.0=pyh0d859eb_0
+- texttable=1.6.4=pyhd3eb1b0_0
+- threadpoolctl=3.2.0=pyha21a80b_0
+- tifffile=2023.12.9=pyhd8ed1ab_0
+- tiledb=2.18.4=h4386cac_0
+- tinycss2=1.2.1=pyhd8ed1ab_0
+- tk=8.6.13=noxft_h4845f30_101
+- toolz=0.12.0=pyhd8ed1ab_0
+- tornado=6.3.3=py310h2372a71_1
+- tqdm=4.66.1=pyhd8ed1ab_0
+- traitlets=5.14.1=pyhd8ed1ab_0
+- treelite=3.9.1=py310h4a6579d_0
+- types-python-dateutil=2.8.19.20240106=pyhd8ed1ab_0
+- typing-extensions=4.9.0=hd8ed1ab_0
+- typing_extensions=4.9.0=pyha770c72_0
+- typing_utils=0.1.0=pyhd8ed1ab_0
+- tzcode=2023d=h3f72095_0
+- tzdata=2023d=h0c530f3_0
+- uc-micro-py=1.0.2=pyhd8ed1ab_0
+- ucx=1.15.0=h6d2d1ec_2
+- ucx-proc=1.0.0=gpu
+- ucx-py=0.35.00=py310_231206_gb5f60ca_0
+- unicodedata2=15.1.0=py310h2372a71_0
+- uri-template=1.3.0=pyhd8ed1ab_0
+- uriparser=0.9.7=hcb278e6_1
+- urllib3=1.26.18=pyhd8ed1ab_0
+- webcolors=1.13=pyhd8ed1ab_0
+- webencodings=0.5.1=pyhd8ed1ab_2
+- websocket-client=1.7.0=pyhd8ed1ab_0
+- websockets=10.4=py310h5764c6d_1
+- wget=1.21.4=h251f7ec_1
+- wheel=0.42.0=pyhd8ed1ab_0
+- wrapt=1.14.1=py310h5eee18b_0
+- xarray=2024.1.0=pyhd8ed1ab_0
+- xerces-c=3.2.5=hac6953d_0
+- xgboost=1.7.6=rapidsai_py310h4c2db5f_7
+- xorg-kbproto=1.0.7=h7f98852_1002
+- xorg-libice=1.1.1=hd590300_0
+- xorg-libsm=1.2.4=h7391055_0
+- xorg-libx11=1.8.7=h8ee46fc_0
+- xorg-libxau=1.0.11=hd590300_0
+- xorg-libxdmcp=1.1.3=h7f98852_0
+- xorg-libxext=1.3.4=h0b41bf4_2
+- xorg-libxrender=0.9.11=hd590300_0
+- xorg-renderproto=0.11.1=h7f98852_1002
+- xorg-xextproto=7.3.0=h0b41bf4_1003
+- xorg-xproto=7.0.31=h7f98852_1007
+- xyzservices=2023.10.1=pyhd8ed1ab_0
+- xz=5.2.6=h166bdaf_0
+- yaml=0.2.5=h7f98852_2
+- yarl=1.9.4=py310h2372a71_0
+- zeromq=4.3.5=h59595ed_0
+- zfp=1.0.1=h59595ed_0
+- zict=3.0.0=pyhd8ed1ab_0
+- zipp=3.17.0=pyhd8ed1ab_0
+- zlib=1.2.13=hd590300_5
+- zlib-ng=2.0.7=h0b41bf4_0
+- zstd=1.5.5=hfc55251_0
+
