Make resource-intensive processes optional

--- a/example/nextflow.config
+++ b/example/nextflow.config
@@ -1,8 +1,10 @@
 params {
     samplesheet = "samplesheet.csv"
 
-    benchmark = true
     benchmark_hvgs = 100
+    scshc = true
+    entropy = false
+    cell_cycle = true
 
     celltypist_model = "Cells_Intestinal_Tract.pkl"
     integration_methods = ["scvi", "scanvi", "harmony", "scanorama", "desc", "combat"]
