--- a/nextflow.config
+++ b/nextflow.config
@@ -8,8 +8,10 @@ params {
     leiden_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
     integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
 
-    benchmark = false
-    benchmark_hvgs = 2000
+    scshc = false
+    entropy = false
+    cell_cycle = false
+    benchmark_hvgs = null
     integration_hvgs = 6000
     normalization_method = "log_total"
 
@@ -94,6 +96,7 @@ profiles {
 }
 
 includeConfig "conf/base.config"
+includeConfig "conf/modules.config"
 
 def check_max(obj, type) {
     if (type == 'memory') {
