Update minimal config

--- a/example/nextflow.config
+++ b/example/nextflow.config
@@ -2,9 +2,10 @@ params {
     samplesheet = "samplesheet.csv"
 
     benchmark_hvgs = 100
-    scshc = true
+    scshc = false
     entropy = false
     cell_cycle = true
+    leiden_resolutions = [0.5, 1]
 
     celltypist_model = "Cells_Intestinal_Tract.pkl"
     integration_methods = ["scvi", "scanvi", "harmony", "scanorama", "desc", "combat"]
