Fix problems with disabling benchmark

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,6 +20,6 @@ process {
     }
 
     withName: BENCHMARK_INTEGRATIONS {
-        ext.when = { params.benchmark_hvgs }
+        ext.when = { params.benchmark_hvgs > 0 }
     }
 }
