--- a/nextflow.config
+++ b/nextflow.config
@@ -10,8 +10,8 @@ params {
 
     scshc = false
     entropy = false
-    cell_cycle = false
-    benchmark_hvgs = null
+    cell_cycle = true
+    benchmark_hvgs = 0
     integration_hvgs = 6000
     normalization_method = "log_total"
 
