Make celltypist truly optional

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,6 +1,6 @@
 process {
     withName: CELLTYPIST {
-        ext.when = { params.celltypist_model }
+        ext.when = { params.celltypist_model != null }
     }
 
     withName: CELL_CYCLE {
