Add parameter for initial entropy smoothness

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,6 +10,7 @@ params {
 
     scshc = false
     entropy = false
+    entropy_initial_smoothness = 0.5
     cell_cycle = true
     benchmark_hvgs = 0
     integration_hvgs = 10000
