Add upset only option

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,4 +22,8 @@ process {
     withName: BENCHMARK_INTEGRATIONS {
         ext.when = { params.benchmark_hvgs > 0 }
     }
+
+    withName: MERGE_DATASETS {
+        ext.when = { !params.upset_only }
+    }
 }
