--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,7 @@ params {
     benchmark_hvgs = 0
     integration_hvgs = 10000
     normalization_method = "log_total"
+    upset_only = false
 
     publish_mode = "symlink"
 
