Add option for deactivating decontX

--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,7 @@ params {
     integration_hvgs = 10000
     normalization_method = "log_total"
     upset_only = false
+    decontX = true
 
     publish_mode = "symlink"
 
