Updated minimal config

--- a/example/nextflow.config
+++ b/example/nextflow.config
@@ -3,14 +3,18 @@ params {
 
     benchmark_hvgs = 100
     scshc = false
-    entropy = false
+    entropy = true
     cell_cycle = true
     leiden_resolutions = [0.5, 1]
 
     celltypist_model = "Cells_Intestinal_Tract.pkl"
-    integration_methods = ["scvi", "scanvi", "harmony", "scanorama", "desc", "combat"]
+    integration_methods = ["scvi", "scanvi", "harmony", "desc", "combat"]
 
     max_cpus = 20
     max_memory = "100G"
     max_time = "6.h"
+}
+
+process {
+    executor = "slurm"
 }
