--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: nf-core CI
 # This workflow runs the pipeline with the minimal test dataset to check that it completes without any syntax errors
 on:
   push:
-    branches:
-      - master
+    branches: [ "master", "dev" ]
   pull_request:
+    branches: [ "master", "dev" ]
 
 jobs:
   test:
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
+
       - name: Install Nextflow
         run: |
           wget -qO- get.nextflow.io | bash
