Implement option for skipping scANVI if results already available

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,10 @@ params {
     upset_only = false
     decontX = true
 
+    scanvi_labels = null
+    scanvi_integrated = null
+    scanvi_model = null
+
     publish_mode = "symlink"
 
     max_cpus = 60
