Fix problems with SOLO

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,8 @@ params {
     upset_only = false
     decontX = true
 
+    has_extended = false
+
     scanvi_labels = null
     scanvi_integrated = null
     scanvi_model = null
