Make cell types optional

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,7 @@ params {
     decontX = true
 
     has_extended = false
+    has_celltypes = true
 
     scanvi_labels = null
     scanvi_integrated = null
