--- a/nextflow.config
+++ b/nextflow.config
@@ -8,6 +8,7 @@ params {
     leiden_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
     integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
 
+    min_cells = 50
     scshc = false
     entropy = false
     entropy_initial_smoothness = 0.5
