--- a/nextflow.config
+++ b/nextflow.config
@@ -98,6 +98,7 @@ profiles {
         podman.enabled         = false
         shifter.enabled        = false
         charliecloud.enabled   = false
+        apptainer.runOptions   = '--no-mount tmp --writable-tmpfs'
     }
     gitpod {
         executor.name          = 'local'
