Add support for custom metadata fields

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,8 @@ params {
 
     has_extended = false
     has_celltypes = true
+    custom_metadata = []
+    custom_hvgs = []
 
     scanvi_labels = null
     scanvi_integrated = null
