Disable entropy in minimal example

--- a/example/nextflow.config
+++ b/example/nextflow.config
@@ -3,7 +3,7 @@ params {
 
     benchmark_hvgs = 100
     scshc = false
-    entropy = true
+    entropy = false
     cell_cycle = true
     leiden_resolutions = [0.5, 1]
 
