Add resouce_scale parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -26,6 +26,7 @@ params {
 
     publish_mode = "symlink"
 
+    resource_scale = 1
     max_cpus = 60
     max_memory = 300.GB
     max_time = 48.h
