Implement mode-specific configs

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,31 +1,9 @@
 // default parameters
 params {
-    samplesheet = null
     outdir = "output"
-    mode = null
-
-    celltypist_model = null
-
-    leiden_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
-    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
-
-    min_cells = 50
-    scshc = false
-    entropy = false
-    entropy_initial_smoothness = 0.5
-    cell_cycle = true
-    benchmark_hvgs = 0
-    integration_hvgs = 10000
-    normalization_method = "log_total"
-    upset_only = false
-    decontX = true
-
-    has_extended = false
-    has_celltypes = true
-    custom_metadata = []
-    custom_hvgs = []
-
     publish_mode = "symlink"
+
+    mode = null
 
     resource_scale = 1
     max_cpus = 60
@@ -108,7 +86,7 @@ profiles {
 }
 
 includeConfig "conf/base.config"
-includeConfig "conf/modules.config"
+includeConfig "conf/modes.config"
 
 def check_max(obj, type) {
     if (type == 'memory') {
