--- a/conf/modes.config
+++ b/conf/modes.config
@@ -1,71 +1,18 @@
 profiles {
     build {
-        params {
-            mode = "build"
-
-            samplesheet = null
-            celltypist_model = null
-
-            leiden_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
-            integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
-
-            min_cells = 50
-            scshc = false
-            entropy = false
-            entropy_initial_smoothness = 0.5
-            cell_cycle = true
-            benchmark_hvgs = 0
-            integration_hvgs = 10000
-            normalization_method = "log_total"
-            upset_only = false
-            decontX = true
-
-            has_extended = false
-            has_celltypes = true
-            custom_metadata = []
-            custom_hvgs = []
-        }
-
-        process {
-            withName: CELLTYPIST {
-                ext.when = { params.celltypist_model != null }
-            }
-
-            withName: CELL_CYCLE {
-                ext.when = { params.cell_cycle }
-            }
-
-            withName: SCSHC_CLUSTERING {
-                ext.when = { params.scshc }
-            }
-
-            withName: SCSHC_CLUSTERING_QC {
-                ext.when = { params.scshc }
-            }
-
-            withName: ENTROPY {
-                ext.when = { params.entropy }
-            }
-
-            withName: BENCHMARK_INTEGRATIONS {
-                ext.when = { params.benchmark_hvgs > 0 }
-            }
-
-            withName: MERGE_DATASETS {
-                ext.when = { !params.upset_only }
-            }
-        }
+        params.mode = "build"
+        includeConfig "modes/build.config"
+        includeConfig "modes/build-extend.config"
     }
 
     extend {
-        params {
-            mode = "extend"
-        }
+        params.mode = "extend"
+        includeConfig "modes/extend.config"
+        includeConfig "modes/build-extend.config"
     }
 
     sub {
-        params {
-            mode = "sub"
-        }
+        params.mode = "sub"
+        includeConfig "modes/sub.config"
     }
 }
