--- a/conf/modes.config
+++ b/conf/modes.config
@@ -1,3 +1,24 @@
+params {
+    leiden_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
+    entropy = false
+    entropy_initial_smoothness = 0.5
+    scshc = false
+}
+
+process {
+    withName: SCSHC_CLUSTERING {
+        ext.when = { params.scshc }
+    }
+
+    withName: SCSHC_CLUSTERING_QC {
+        ext.when = { params.scshc }
+    }
+
+    withName: ENTROPY {
+        ext.when = { params.entropy }
+    }
+}
+
 profiles {
     build {
         params.mode = "build"
