--- a/nextflow.config
+++ b/nextflow.config
@@ -1,7 +1,7 @@
 // default parameters
 params {
     outdir = "output"
-    publish_mode = "symlink"
+    publish_mode = "copy"
 
     mode = null
 
