Remove transfer from build workflow

--- a/example/extend/nextflow.config
+++ b/example/extend/nextflow.config
@@ -3,6 +3,7 @@ includeConfig "../test.config"
 params {
     samplesheet = "samplesheet.csv"
     base = "atlas.h5ad"
+    model = "model"
 
     benchmark_hvgs = 100
     cell_cycle = true
