Start working on SOLO problems

--- a/conf/modes/build-extend.config
+++ b/conf/modes/build-extend.config
@@ -4,6 +4,7 @@ params {
     min_cells = 50
     cell_cycle = true
     custom_hvgs = []
+    integration_hvgs = 10000
     benchmark_hvgs = 0
 
     normalization_method = "log_total"
