Improve config structure

--- a/conf/modes/build.config
+++ b/conf/modes/build.config
@@ -1,3 +1,6 @@
 params {
     integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
+    custom_hvgs = []
+    integration_hvgs = 10000
+    benchmark_hvgs = 0
 }
