Change master branch name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: SIMBA CI
 on:
     push:
       branches:
-        - dev
+        - master
     pull_request:
     release:
         types: [published]
