Use separate environment for scHPL

--- a/conf/modes/build.config
+++ b/conf/modes/build.config
@@ -1,5 +1,5 @@
 params {
-    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "desc", "combat", "trvaep"]
+    integration_methods = ["scvi", "scanvi", "harmony", "scgen", "scanorama", "bbknn", "combat", "trvaep"]
     custom_hvgs = []
     integration_hvgs = 10000
     benchmark_hvgs = 0
