--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,10 @@ services:
     build: 
       context: rpy
     image: bigdatainbiomedicine/sc-rpy:1.2
+  scHPL:
+    build: 
+      context: scHPL
+    image: bigdatainbiomedicine/sc-schpl:1.0
   cellxgene:
     build: 
       context: cellxgene
