Update extend example config

--- a/example/extend/nextflow.config
+++ b/example/extend/nextflow.config
@@ -4,6 +4,7 @@ params {
     samplesheet = "samplesheet.csv"
     base = "atlas.h5ad"
     model = "model"
+    tree = "tree.pkl"
 
     benchmark_hvgs = 100
     cell_cycle = true
