Add GPU profile

--- a/conf/modes.config
+++ b/conf/modes.config
@@ -27,4 +27,14 @@ profiles {
         params.mode = "sub"
         includeConfig "modes/sub.config"
     }
+
+    gpu {
+        apptainer.runOptions = "--nv"
+
+        process {
+            withLabel: "gpu" {
+                ext.use_gpu = true
+            }
+        }
+    }
 }
