--- a/conf/modes/build.config
+++ b/conf/modes/build.config
@@ -4,3 +4,13 @@ params {
     integration_hvgs = 10000
     benchmark_hvgs = 0
 }
+
+profiles {
+    gpu {
+        withLabel: "gpu" {
+            withName: ".*:INTEGRATE_(SCVI|GPU)" {
+                ext.use_gpu = true
+            }
+        }
+    }
+}
