Implement option for using manual tree in EXTEND workflow

--- a/conf/modes/extend.config
+++ b/conf/modes/extend.config
@@ -3,3 +3,9 @@ params {
     model = null
     tree = null
 }
+
+process {
+    withName: SC_HPL_LEARN {
+        ext.when = { !params.tree }
+    }
+}
