Add option for disabling scHPL

--- a/conf/modes.config
+++ b/conf/modes.config
@@ -2,12 +2,7 @@ params {
     leiden_resolutions = [0.25, 0.5, 0.75, 1, 1.5, 2]
     entropy = false
     entropy_initial_smoothness = 0.5
-}
-
-process {
-    withName: ENTROPY {
-        ext.when = { params.entropy }
-    }
+    sc_hpl = true
 }
 
 profiles {
@@ -40,5 +35,15 @@ profiles {
 
     no_r {
         params.entropy = false
+    }
+}
+
+process {
+    withName: ENTROPY {
+        ext.when = { params.entropy }
+    }
+
+    withName: SC_HPL_LEARN {
+        ext.when = { params.sc_hpl }
     }
 }
