--- a/conf/modes/extend.config
+++ b/conf/modes/extend.config
@@ -6,6 +6,6 @@ params {
 
 process {
     withName: SC_HPL_LEARN {
-        ext.when = { !params.tree }
+        ext.when = { !params.tree && params.sc_hpl }
     }
 }
